try to fix the sword animation on IOS

--- a/_sass/keyframes.scss
+++ b/_sass/keyframes.scss
@@ -3,27 +3,27 @@ $offscreen-amount: 2em;
 
 @keyframes middle-saber-in {
   0% {
-    transform: translate(-50%, -50%) rotate(720deg);
+    transform: translate3d(-50%, -50%, 0) rotate(360deg);
   }
   50% {
-    transform: translate(-50%, -50%) rotate(-90deg);
+    transform: translate3d(-50%, -50%, 0) rotate(-90deg);
   }
   100% {
-    transform: translate(-50%, -50%) rotate(-90deg)
-      translate($offscreen-amount, 0%);
+    transform: translate3d(-50%, -50%, 0) rotate(-90deg)
+      translate3d($offscreen-amount, 0%, 0);
   }
 }
 
 @keyframes middle-saber-out {
   0% {
-    transform: translate(-50%, -$offscreen-amount) rotate(-90deg);
+    transform: translate3d(-50%, -$offscreen-amount, 0) rotate(-90deg);
   }
   50% {
-    transform: translate(-50%, -50%) rotate(-90deg);
+    transform: translate3d(-50%, -50%, 0) rotate(-90deg);
   }
 
   100% {
-    transform: translate(-50%, -50%) rotate(720deg);
+    transform: translate3d(-50%, -50%, 0) rotate(360deg);
   }
 }
 
