--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -287,7 +287,7 @@ HERO IMAGE - even works on IOS!
     }
     #middle-saber {
       top: 50%;
-      transform: translate(-50%, -50%) rotate(720deg);
+      transform: translate(-50%, -50%);
       animation: middle-saber-out 0.5s ease forwards;
     }
 
